--- a/src/components/Bookshelves/index.css
+++ b/src/components/Bookshelves/index.css
@@ -1,221 +1,220 @@
-.all-products-section {
+/* main container */
+
+#bookshelves-main-container {
+  background-color: #e5e5e5;
+
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+}
+
+/* sub container */
+#bookshelves-sub-container {
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  width: 100%;
+  /* border: 5px solid black; */
+  width: 90%;
+  margin-top: 20px;
+  padding: 10px;
 }
-.under {
+@media screen and (min-width: 768px) {
+  #bookshelves-sub-container {
+    /* border: 5px solid black; */
+    flex-direction: row;
+    min-height: 100vh;
+    width: 80%;
+    margin-top: 20px;
+    padding: 0px;
+  }
+}
+/* left navbar */
+#bookshelves-left-navbar {
+  background-color: transparent;
+}
+@media screen and (min-width: 768px) {
+  #bookshelves-left-navbar {
+    background-color: #ffffff;
+    min-height: 90%;
+    min-width: 150px;
+  }
+}
+.left-navbar-heading {
+  font: 600 14px 'Roboto';
+  margin-left: 15px;
+}
+@media screen and (min-width: 768px) {
+  .left-navbar-heading {
+    font: 600 16px 'Roboto';
+    margin-left: 15px;
+  }
+}
+.list-container-of-bookshelves-options {
+  list-style-type: none;
+  margin-top: 10px;
+  padding-left: 15px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 80vw;
+}
+
+@media screen and (min-width: 768px) {
+  .list-container-of-bookshelves-options {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    /* border: 2px solid red; */
+  }
+}
+
+/* books list container */
+#render-book-list-container {
+}
+@media screen and (min-width: 768px) {
+  #render-book-list-container {
+    width: 100%;
+    /* border: 2px green solid; */
+    margin-left: 10px;
+  }
+}
+
+#show-books-container {
+}
+
+.bookshelves-show-container {
+  display: flex;
+  /* justify-content: space-between; */
+  flex-wrap: wrap;
+  min-height: 80vh;
+  /* border: 2px solid blue; */
+}
+
+.footer-list {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 55px;
+}
+
+/* no books container */
+.no-books-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+}
+.no-books-image {
+  width: 60%;
+  height: 60%;
+}
+
+/* failure view container */
+.bookshelves-failure-view-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+}
+
+/* loader container */
+.loader-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 60vh;
+  width: 100%;
+  /* border: 2px solid blue; */
+}
+
+/* Search container */
+.mobile-search-input-container {
+  display: flex;
+  margin-left: 15px;
+}
+@media screen and (min-width: 768px) {
+  .mobile-search-input-container {
+    display: none;
+  }
+}
+.search-container-heading {
   display: none;
 }
 @media screen and (min-width: 768px) {
-  .all-products-section {
-    flex-direction: row;
+  .search-container-heading {
+    display: flex;
+    font-family: 'Inter';
+    font-size: 18px;
+    font-weight: 500;
+  }
+}
+
+#search-container {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  #search-container {
+    display: flex;
     justify-content: space-between;
-    padding-bottom: 100px;
+    margin-left: 43px;
   }
 }
 
-span {
-  color: #334155;
-  font-family: roboto;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 24px;
-}
-
-@media screen and (min-width: 768px) {
-  .all-products-container {
-    background-color: #e5e5e5;
-
-    display: flex;
-    flex-direction: row;
-    padding: 45px;
-    justify-content: center;
-    align-items: flex-start;
-  }
-
-  .booksBox {
-    padding-right: 15px;
-  }
-
-  .all-products-section {
-    display: flex;
-    flex-direction: column;
-  }
-
-  @media screen and (min-width: 768px) {
-    .all-products-section {
-      flex-direction: row;
-      justify-content: space-between;
-    }
-    .loader-container {
-      width: 100%;
-      justify-content: center;
-      align-items: center;
-    }
-  }
-
-  .products-list {
-    display: flex;
-    flex-wrap: wrap;
-    padding-left: 0;
-  }
-}
-
-.products-heading {
-  color: #475569;
-  font-family: 'Roboto';
-  font-size: 20px;
-  font-weight: 500;
-}
-
-@media screen and (min-width: 768px) {
-  .products-heading {
-    font-size: 32px;
-  }
-}
-
-.products-list {
+.search-icon-and-input-container {
   display: flex;
-  flex-wrap: wrap;
-  padding-left: 0;
-}
-
-.no-products-view {
-  display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-bottom: 64px;
-  margin-top: 48px;
+  height: 40px;
+  border: 2px solid #cbd5e1;
+  box-shadow: 5px;
+  border-radius: 4px;
 }
 
 @media screen and (min-width: 768px) {
-  .no-products-view {
-    margin-left: 30px;
-    width: 70%;
-    padding-bottom: 0;
-    margin-top: 0px;
+  .search-icon-and-input-container {
+    /* border: 2px solid red; */
   }
 }
 
-.no-products-img {
+@media screen and (max-width: 350px) {
+  .search-icon-and-input-container {
+    width: 250px;
+    /* border: 2px solid red; */
+  }
+}
+
+.search-input {
+  height: 37px;
   width: 250px;
-  height: 180px;
+  border: none;
+  padding-left: 10px;
 }
-
-@media screen and (min-width: 768px) {
-  .no-products-img {
-    width: 459px;
-    height: 315px;
-  }
+.search-icon-container {
+  padding: 7.5px 16px;
+  background-color: #e5e5e5;
+  border: none;
 }
-
-.no-products-heading {
-  color: #171f46;
-  font-family: 'Roboto';
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 1.3px;
+.search-icon {
+  height: 14px;
+  width: 14px;
 }
-
-@media screen and (min-width: 768px) {
-  .no-products-heading {
-    margin-top: 32px;
-    font-size: 24px;
-  }
-}
-
-.no-products-description {
-  text-align: center;
-  color: #64748b;
-  font-family: 'Roboto';
-  font-size: 14px;
-  width: 90%;
-  max-width: 288px;
-  line-height: 1.3;
-}
-
-@media screen and (min-width: 768px) {
-  .no-products-description {
-    margin-top: 12px;
-    font-size: 18px;
-    width: 60%;
-    max-width: 466px;
-  }
-}
-
-.products-error-view-container {
+.bookshelves-search-container {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  margin-top: 48px;
-  padding-bottom: 64px;
+  margin-top: 59px;
+  margin-left: 18px;
 }
-
 @media screen and (min-width: 768px) {
-  .products-error-view-container {
-    margin-top: 0px;
-    margin-left: 30px;
-    width: 70%;
-    padding-bottom: 0;
-  }
-}
-
-.products-failure-img {
-  width: 250px;
-  height: 200px;
-}
-
-@media screen and (min-width: 768px) {
-  .products-failure-img {
-    width: 400px;
-    height: 350px;
-  }
-}
-
-.product-failure-heading-text {
-  color: #171f46;
-  font-family: 'Roboto';
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 1.3;
-}
-
-@media screen and (min-width: 768px) {
-  .product-failure-heading-text {
-    font-size: 24px;
-  }
-}
-
-.products-failure-description {
-  text-align: center;
-  color: #64748b;
-  font-family: 'Roboto';
-  font-size: 14px;
-  width: 90%;
-  max-width: 288px;
-  line-height: 1.3;
-}
-
-@media screen and (min-width: 768px) {
-  .products-failure-description {
-    font-size: 18px;
-    width: 60%;
-    max-width: 466px;
-  }
-}
-
-.products-loader-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
-
-@media screen and (min-width: 768px) {
-  .products-loader-container {
-    width: 70%;
+  .bookshelves-search-container {
+    height: 20px;
+    width: 100%;
+    margin-top: 15px;
+    margin-left: 0px;
+    order: 1;
+    display: flex;
+    /* border: 2px solid red; */
   }
 }
