--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -1,54 +1,38 @@
-.footer-container {
-  width: 100%;
-  height: 100px;
-  right: 0px;
-  top: 0px;
-
-  /* Text Color / Alternative */
-
-  /* Basic / 300 */
-
-  border: 1px solid #e4e7eb;
-  box-sizing: border-box;
-
-  /* Light / blue-gray / 900 */
-
-  background-color: #e5e5e5;
+.footer-section-main-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  margin-top: 26px;
+  margin-bottom: 15px;
 }
-
-.para {
-  font-family: DM Sans;
-  font-style: normal;
-  font-weight: bolder;
-  font-size: 19px;
-  margin-top: 15px;
-  margin-bottom: 30px;
-  text-align: center;
-
-  color: #3d3c3c;
-}
-
-.container {
-  margin-top: 15px;
-}
-
-.logo-image {
-  margin: 12px;
-  height: 40px;
-}
-
-.social-icon {
-  height: 20px;
-  width: 20px;
-
-  margin: 10px;
-}
-
-.logo-container {
+.footer-icons-container {
   display: flex;
-  align-items: center;
+  justify-content: space-between;
+  width: 150px;
+}
+.footer-icon {
+  color: #3d3c3c;
+  font-size: 13.7143px;
+}
+@media screen and (min-width: 768px) {
+  .footer-icon {
+    font-size: 18px;
+    line-height: 21px;
+  }
+}
+
+.footer-title {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 14px;
+  text-align: center;
+  color: #3d3c3c;
+  margin-top: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-title {
+    font-size: 13px;
+  }
 }
