--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -1,13 +1,26 @@
 .nav-header {
   display: flex;
-  flex-direction: row;
   justify-content: center;
-  align-items: center;
-  border-bottom: 1px solid rgb(243, 243, 243);
-  width: 100%;
-  height: 85px;
+  border-bottom: 1px solid #ffffff;
+  background-color: #ffffff;
 }
 
+@media screen and (min-width: 768px) {
+  .nav-header {
+    height: 10vh;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .nav-header {
+    flex-direction: column;
+    align-items: center;
+    border-bottom-style: none;
+    width: 1vw;
+  }
+}
+
+/* nav Content */
 .nav-content {
   display: flex;
   align-items: center;
@@ -15,161 +28,183 @@
   width: 90%;
   max-width: 1110px;
   padding-top: 25px;
+
   padding-bottom: 25px;
 }
 
-.log-out-m {
-  width: 24px;
-}
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .nav-content {
     flex-direction: column;
-    padding: 20px;
-    margin-right: 20px;
-    margin-left: 20px;
-  }
-
-  .website-logo {
-    margin-left: 55px;
-  }
-  .logout-desktop-btn {
-    margin-right: 25px;
-  }
-  .nav-header {
-    display: none;
-  }
-  .nav-header-mobile {
-    width: 100vw;
-    height: 60px;
+    max-height: 142px;
+    align-items: flex-start;
+    justify-content: space-between;
   }
 }
 
-.nav-bar-large-container {
+/* navbar-mobile-logo-main-container */
+@media screen and(max-width: 767px) {
+  .navbar-mobile-logo-main-container {
+    height: 180px;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+  }
+}
+
+/* navabar mobile container */
+.navbar-mobile-logo-container {
   display: flex;
   justify-content: space-between;
-  width: 100%;
-}
-
-.nav-bar-large-container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  max-width: 1110px;
-}
-
-.website-logo {
-  width: 110px;
+  width: 90vw;
+  margin-left: 27px;
 }
 
 @media screen and (min-width: 768px) {
-  .website-logo {
-    width: 165px;
-  }
-  .nav-header-mobile {
+  .navbar-mobile-logo-container {
     display: none;
   }
 }
 
+/* nav bars logo */
+.nav-bars-button {
+  outline: none;
+  border: none;
+  background-color: transparent;
+}
+
+.nav-bars {
+  height: 40px;
+  width: 40px;
+}
+
+/* scroll-options-container */
+
+.scroll-options-container {
+  display: flex;
+  background-color: #fdf9f9;
+  padding-bottom: 0px;
+}
+
+@media screen and (min-width: 768px) {
+  .scroll-options-container {
+    display: none;
+  }
+}
+
+/* options-container */
+.options-container {
+  display: flex;
+  justify-content: space-around;
+  list-style-type: none;
+  width: 100vw;
+}
+
+.close-button {
+  outline: none;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.close-logo {
+  height: 20px;
+  width: 20px;
+}
+
+/* navbar desktop container  */
+
+.navbar-desktop-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  max-width: 1110px;
+  margin-right: 70px;
+}
+
+@media screen and (max-width: 767px) {
+  .navbar-desktop-container {
+    display: none;
+  }
+}
+
+/* nav menu */
 .nav-menu {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  align-self: center;
-  flex: auto;
-  padding: 15px;
-
+  align-items: center;
+  flex: 1;
   list-style-type: none;
   margin-top: 0px;
+  margin-right: 15px;
   margin-bottom: 0px;
 }
 
 @media screen and (max-width: 767px) {
-}
-.nav-menu-mobile {
-  width: 100%;
-}
-
-@media screen and (min-width: 768px) {
-  .nav-menu-mobile {
+  .nav-menu {
     display: none;
+    margin-right: 0px;
   }
 }
 
-.nav-menu-list-mobile {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  height: 70px;
-  background-color: #e6f6ff;
-  flex: 1;
-  list-style-type: none;
-  margin-top: 0px;
-  margin-bottom: 0px;
-  padding: 0px;
-}
-
+/* nav-menu-item */
 .nav-menu-item {
-  font-family: 'roboto';
-  text-decoration: none;
+  font-family: 'Roboto';
+  font-weight: 400;
+  font-size: 16px;
   margin: 10px;
-  font-weight: 400;
-  font-size: 16px;
 }
 
-.nav-link {
-  text-decoration: none;
-  color: #64748b;
-  font-family: 'roboto';
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24px;
-  letter-spacing: 0em;
-  text-align: left;
+.nav-menu-item-click {
+  color: #0284c7;
 }
 
-.nav-menu-item-mobile {
-  margin: 0px;
-  cursor: pointer;
+.home-true {
+  background-color: #0284c7;
+}
+.shelf-true {
+  color: #0284c7;
 }
 
-.logout-desktop-btn {
-  font-family: 'roboto';
+/* logout desktop button */
+.logout-desktop-button {
+  font-family: 'Roboto';
+  font-size: 10px;
   font-weight: 600;
-  font-size: 14px;
   padding: 8px 16px;
   color: #ffffff;
   background-color: #0284c7;
-  border: none;
-  border-radius: 4px;
-  margin-left: 14px;
-  cursor: pointer;
   outline: none;
-  margin-bottom: 12px;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
 }
 
-.nav-mobile-btn-container {
+/* @media screen and (min-width: 768px){
+    .logout-desktop-button{
+        display: none;
+    }
+} */
+
+/* Link */
+.nav-link {
   display: flex;
-  justify-content: center;
-  width: 25%;
+  align-items: center;
+  text-decoration: none;
+  color: #475569;
 }
 
-.nav-mobile-btn {
-  border: none;
-  padding: 0px;
-  background: transparent;
-  cursor: pointer;
-  outline: none;
+/* website-logo */
+
+.website-logo {
+  width: 130px;
+  height: 40px;
+  margin-left: 5px;
 }
 
 @media screen and (min-width: 768px) {
-  .nav-mobile-btn {
-    display: none;
+  .website-logo {
+    margin-left: 70px;
   }
-}
-
-.nav-bar-image {
-  width: 24px;
 }
