--- a/src/components/LoginForm/index.css
+++ b/src/components/LoginForm/index.css
@@ -9,7 +9,7 @@
   margin: auto;
 }
 
-@media screen and (min-width: 778px) {
+@media screen and (min-width: 992px) {
   .login-form-container {
     display: flex;
     flex-direction: row;
@@ -17,7 +17,7 @@
   }
 }
 
-@media screen and (min-width: 778px) {
+@media screen and (min-width: 992px) {
   .login-website-logo-mobile-image {
     display: none;
   }
@@ -30,10 +30,33 @@
   align-self: flex-center;
 }
 
-@media screen and (min-width: 778px) {
+@media screen and (min-width: 1201px) {
   .login-image {
-    height: 1024px;
-    width: 780px;
+    height: 800px;
+    width: 700px;
+    left: 0px;
+    top: 0px;
+    border-radius: 0px;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .login-image {
+    height: 800px;
+    width: 490px;
+    left: 0px;
+    top: 0px;
+    border-radius: 0px;
+  }
+}
+
+@media screen and (min-width: 1470px) {
+  .login-form-container {
+    justify-content: space-around;
+  }
+  .login-image {
+    height: 800px;
+    width: 800px;
     left: 0px;
     top: 0px;
     border-radius: 0px;
@@ -44,7 +67,7 @@
   width: 185px;
 }
 
-@media screen and (max-width: 776px) {
+@media screen and (max-width: 991px) {
   .login-image {
     display: none;
   }
@@ -63,10 +86,10 @@
   padding: 20px;
   border-radius: 8px;
   width: 100%;
-  max-width: 400px;
+  max-width: 380px;
 }
 
-@media screen and (min-width: 778px) {
+@media screen and (min-width: 992px) {
   .form-container {
     width: 400px;
     margin-right: 50px;
@@ -85,7 +108,7 @@
 
 .input-label {
   margin-bottom: 0px;
-  font-family: 'Roboto';
+  font-family: 'roboto';
   font-weight: bold;
   font-size: 12px;
   line-height: 16px;
