--- a/src/components/Not Found/index.css
+++ b/src/components/Not Found/index.css
@@ -1,38 +1,64 @@
 .not-found-container {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 70vh;
-}
-.not-found-img {
-  width: 400px;
+  flex-direction: column;
 }
 
-h1 {
-  color: #334155;
-  font-family: Inter;
-  font-size: 24px;
-  font-style: bold;
-  font-weight: bold;
+/* for not found background image */
+.not-found-bg-image {
+  width: 448px;
+  height: 300px;
+  margin-bottom: 10px;
+}
+@media screen and (max-width: 767px) {
+  .not-found-bg-image {
+    width: 225px;
+    height: 225px;
+  }
+}
+/* page not found heading */
+.pageNotFound-heading {
+  width: 448px;
   font-size: 32px;
-}
-
-p {
-  font-size: 16px;
-}
-
-button {
-  font-family: 'roboto';
+  color: #334155;
+  font-family: 'Roboto';
   font-weight: 600;
+  text-align: center;
+}
+@media screen and (max-width: 767px) {
+  .pageNotFound-heading {
+    font-size: 20px;
+    font-weight: 400;
+  }
+}
+/* pageNotFound-description */
+.pageNotFound-description {
   font-size: 16px;
-  padding: 8px 16px;
-  color: #ffffff;
+  color: #475569;
+  font-family: 'Roboto';
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 20px;
+}
+@media screen and (max-width: 767px) {
+  .pageNotFound-description {
+    font-size: 14px;
+  }
+}
+/* page not found back goto button */
+.notfound-button {
   background-color: #0284c7;
+  color: hsl(0, 0%, 100%);
+  font-size: 14px;
+  font-weight: 500;
   border: none;
-  border-radius: 4px;
-  margin-left: 14px;
-  cursor: pointer;
-  outline: none;
-  margin-top: 15px;
+  border-radius: 10px;
+  padding: 16px 8px 16px 8px;
+}
+@media screen and (max-width: 767px) {
+  .notfound-button {
+    border-radius: 8px;
+    padding: 8px, 16px, 8px, 16px;
+  }
 }
